--- a/package.json
+++ b/package.json
@@ -18,14 +18,29 @@
     "react-intl": "^5.23.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.0",
-    "recharts": "^2.1.13"
+    "recharts": "^2.1.13",
+    "styled-components": "^5.3.9"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "copy .env.development .env && vite",
+    "build": "copy .env.production .env && tsc && vite build",
     "serve": "vite preview",
     "lint": "eslint . --ext js,ts,tsx",
-    "format": "prettier --write **/*.{js,ts,tsx} && eslint . --ext js,ts,tsx --fix"
+    "lint-fix": "eslint . --ext js,ts,tsx",
+    "format": "prettier --write **/*.{js,ts,tsx} && eslint . --ext js,ts,tsx --fix",
+    "postinstall": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    ".(tx|tsx)": [
+      "yarn lint",
+      "yarn lint:fix",
+      "git add ."
+    ]
   },
   "browserslist": {
     "production": [
@@ -40,6 +55,8 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.1",
+    "@commitlint/config-conventional": "^17.4.0",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@rollup/plugin-babel": "^5.3.0",
@@ -60,7 +77,9 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
     "less": "^4.1.2",
+    "lint-staged": "^13.2.1",
     "prettier": "^2.4.1",
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
