--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "styled-components": "^5.3.9"
   },
   "scripts": {
-    "dev": "cp .env.development .env && vite",
-    "build": "cp .env.production .env && tsc && vite build",
+    "dev": "copy .env.development .env && vite",
+    "build": "copy .env.production .env && tsc && vite build",
     "serve": "vite preview",
     "lint": "eslint . --ext js,ts,tsx",
     "lint-fix": "eslint . --ext js,ts,tsx",
